Conceptual Implementation of JWT Provider and Request Filter
This commit summarizes the conceptual progress for fleshing out the JWT-based authentication mechanism for Jobseekers. This includes a detailed conceptual implementation of `JwtTokenProvider` and `JwtRequestFilter`, and their integration into the Spring Security configuration. This is part of Phase 3: User Management & Job Application.

No actual Java code has been added to this repository; instead, this represents my planning and conceptual generation of code structures.

**Summary of Steps and Conceptual Changes for JWT Implementation:**

1.  **`JwtTokenProvider.java` (Detailed Conceptual Implementation):**
    *   Outlined as a Spring component using JJWT concepts for token operations.
    *   Includes configuration for JWT secret key (from properties) and expiration.
    *   Detailed conceptual logic for:
        *   `generateToken`: Creates JWTs with subject, roles, issued-at, and expiration claims, signed with HS512.
        *   `validateToken`: Parses and validates token signature and expiration.
        *   `getUsernameFromToken`: Extracts username/subject from token.
        *   `getAuthentication`: Creates a Spring Security `Authentication` object from a valid token, crucially using `UserDetailsService` to fetch fresh user details (roles, account status).
    *   Includes robust considerations for secret key handling in `@PostConstruct` (Base64 decoding, length checks, development fallback) and TODOs for production security.

2.  **`JwtRequestFilter.java` (Detailed Conceptual Implementation):**
    *   Outlined as a Spring component extending `OncePerRequestFilter`.
    *   Injects `JwtTokenProvider` and `JobseekerUserDetailsService`.
    *   Implements `doFilterInternal` to:
        *   Extract JWT from "Authorization: Bearer" header.
        *   If token exists, validate it using `JwtTokenProvider.validateToken()`.
        *   If token is valid, obtain an `Authentication` object using `JwtToken